style(#32): fixed margin error in collapse content

--- a/src/app/modules/party/pages/candidate-detail-page/candidate-detail-page.component.scss
+++ b/src/app/modules/party/pages/candidate-detail-page/candidate-detail-page.component.scss
@@ -67,6 +67,9 @@
 
 .candidate-claims nz-collapse {
   margin: 0 $wb-space-small;
+
+  nz-collapse-panel {
+  }
 }
 
 @media screen and (max-width: $wb-breakpoint-medium) {
