--- a/src/assets/themes/collapse.override.less
+++ b/src/assets/themes/collapse.override.less
@@ -13,6 +13,14 @@ nz-collapse.ant-collapse.ant-collapse-icon-position-left {
     .ant-collapse-header {
       background-color: @wb-color-neutral-0;
     }
+    .ant-collapse-content {
+      *:first-child {
+        margin-top: 0;
+      }
+      *:last-child {
+        margin-bottom: 0;
+      }
+    }
   }
 }
 
